# Potato

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/css/: style.css
src/js/: app.js  claude.js  editor.js  preview.js  sidebar.js  wikilinks.js
