[package]
name = "potato"
version = "0.1.0"
edition = "2021"

[lib]
name = "potato_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "potato"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
rfd = "0.15"
tokio = { version = "1", features = ["rt", "process"] }
